fix: edges of 3D model area are overlapping in the setup tab

--- a/tabs/setup.css
+++ b/tabs/setup.css
@@ -74,6 +74,7 @@
     background-image: url(../images/paper.jpg);
     background-size: 100%;
     background-position: center;
+	border-radius: 5px;
 }
 
 #canvas {
